--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
               </p>
               <select class="customer-input">
                 <option value="" disabled selected>select option</option>
-                <option value="">bali</option>
-                <option value="">jakarta</option>
+                <option value="">Bali</option>
+                <option value="">Japan</option>
               </select>
               <br />
               <br />
@@ -196,7 +196,8 @@
         </div>
         <div class="destinasi">
         <p class="tempat">Singapore</p>
-        <p class="detail-tempat">This description supports <br> and extends the bullet point <br> above.</p>
+        <p class="detail-tempat">Travel dan wisata di Singapore. <br> Jelajahi kota modern dengan ikon <br> seperti Marina Bay Sands, Universal Studios, dan <br> kuliner khas di hawker center 
+        </p>
     </div>
   </div>
      </div>
@@ -215,7 +216,7 @@
   </div>
   <div class="destinasi">
   <p class="tempat">Bandung</p>
-  <p class="detail-tempat">Travel dan wisata di Bali. <br> kunjungi cagar budaya dan <br> kuliner yang menarik</p>
+  <p class="detail-tempat">  Travel dan wisata di Bandung. Nikmati <br> udara sejuk pegunungan, dan kuliner khas</p>
 </div>
 
 <!--panel 2-->
@@ -225,7 +226,7 @@
     </div>
     <div class="destinasi">
     <p class="tempat">Surabaya</p>
-    <p class="detail-tempat">This description supports <br> and extends the bullet point <br> above.</p>
+    <p class="detail-tempat">Travel dan wisata di Surabaya. Kunjungi Kota <br> Pahlawan dengan sejarahnya yang kaya</p>
 </div>
 </div>
 
@@ -235,8 +236,8 @@
 <img class="bulb" src="assets/star.png" alt="placeholder">
 </div>
 <div class="destinasi">
-<p class="tempat">Third Feature</p>
-<p class="detail-tempat">This description supports <br> and extends the bullet point <br> above.</p>
+<p class="tempat">Malaysia</p>
+<p class="detail-tempat">Travel dan wisata di Malaysia. <br> Temukan keindahan Menara Petronas, kuliner beragam budaya, <br> serta pantai eksotis </p>
 </div>
 </div>
 </div>
